Fixed styling with media queries, had an extra } bracket not including the input area for sizing on mobile screens.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -99,17 +99,17 @@ footer {
   text-align: center;
 }
 
-@media only screen and (min-device-width: 360px) and (max-device-width: 465px) {
+@media only screen and (min-device-width: 365px) and (max-device-width: 380px) {
   button {
-    min-height: 30px;
-    width: 30px;
+    min-height: 25px;
+    width: 25px;
     border-radius: 50%;
     border-color: transparent;
     background: green;
     color: #fff;
     font-size: 20px;
     border: 1px solid black !important;
-  }
+}
 
   input[type="text"] {
     text-align: center;
